// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/lib/buildRelationReferences.js basic schemas 1`] = `
Array [
  Object {
    "destinationSchemaId": "12345",
    "id": "322ab064-5214-4c9a-830b-6755c1b39dba",
    "identifiers": Object {
      "destination": Object {
        "alias": Object {
          "plural": Object {
            "camel": "directors",
            "kebab": "directors",
            "label": "Directors",
            "pascal": "Directors",
            "snake": "directors",
          },
          "singular": Object {
            "camel": "director",
            "kebab": "director",
            "label": "Director",
            "pascal": "Director",
            "snake": "director",
          },
        },
        "canonical": Object {
          "plural": Object {
            "camel": "users",
            "kebab": "users",
            "label": "Users",
            "pascal": "Users",
            "snake": "users",
          },
          "singular": Object {
            "camel": "user",
            "kebab": "user",
            "label": "User",
            "pascal": "User",
            "snake": "user",
          },
        },
      },
      "source": Object {
        "alias": Object {
          "plural": Object {
            "camel": "directedMovies",
            "kebab": "directed-movies",
            "label": "Directed Movies",
            "pascal": "DirectedMovies",
            "snake": "directed_movies",
          },
          "singular": Object {
            "camel": "directedMovie",
            "kebab": "directed-movie",
            "label": "Directed Movie",
            "pascal": "DirectedMovie",
            "snake": "directed_movie",
          },
        },
        "canonical": Object {
          "plural": Object {
            "camel": "movies",
            "kebab": "movies",
            "label": "Movies",
            "pascal": "Movies",
            "snake": "movies",
          },
          "singular": Object {
            "camel": "movie",
            "kebab": "movie",
            "label": "Movie",
            "pascal": "Movie",
            "snake": "movie",
          },
        },
      },
    },
    "sourceRelationId": "relation-example-01",
    "sourceSchemaId": "45678",
    "type": "BELONGS_TO",
  },
]
`;

exports[`/lib/inflateSchema.js basic schemas 1`] = `
Object {
  "attributes": Array [],
  "configuration": Object {},
  "id": "12345",
  "identifiers": Object {
    "plural": Object {
      "camel": "users",
      "kebab": "users",
      "label": "Users",
      "pascal": "Users",
      "snake": "users",
    },
    "singular": Object {
      "camel": "user",
      "kebab": "user",
      "label": "User",
      "pascal": "User",
      "snake": "user",
    },
  },
  "references": Array [
    Object {
      "destinationSchemaId": "12345",
      "id": "838fb2f6-55b6-419b-8dca-0bc4cc1dbd34",
      "identifiers": Object {
        "destination": Object {
          "alias": Object {
            "plural": Object {
              "camel": "directors",
              "kebab": "directors",
              "label": "Directors",
              "pascal": "Directors",
              "snake": "directors",
            },
            "singular": Object {
              "camel": "director",
              "kebab": "director",
              "label": "Director",
              "pascal": "Director",
              "snake": "director",
            },
          },
          "canonical": Object {
            "plural": Object {
              "camel": "users",
              "kebab": "users",
              "label": "Users",
              "pascal": "Users",
              "snake": "users",
            },
            "singular": Object {
              "camel": "user",
              "kebab": "user",
              "label": "User",
              "pascal": "User",
              "snake": "user",
            },
          },
        },
        "source": Object {
          "alias": Object {
            "plural": Object {
              "camel": "directedMovies",
              "kebab": "directed-movies",
              "label": "Directed Movies",
              "pascal": "DirectedMovies",
              "snake": "directed_movies",
            },
            "singular": Object {
              "camel": "directedMovie",
              "kebab": "directed-movie",
              "label": "Directed Movie",
              "pascal": "DirectedMovie",
              "snake": "directed_movie",
            },
          },
          "canonical": Object {
            "plural": Object {
              "camel": "movies",
              "kebab": "movies",
              "label": "Movies",
              "pascal": "Movies",
              "snake": "movies",
            },
            "singular": Object {
              "camel": "movie",
              "kebab": "movie",
              "label": "Movie",
              "pascal": "Movie",
              "snake": "movie",
            },
          },
        },
      },
      "sourceRelationId": "relation-example-01",
      "sourceSchemaId": "45678",
      "type": "BELONGS_TO",
    },
  ],
  "relations": Array [],
}
`;

exports[`/lib/inflateSchemas.js basic schemas 1`] = `
Array [
  Object {
    "attributes": Array [],
    "configuration": Object {},
    "id": "12345",
    "identifiers": Object {
      "plural": Object {
        "camel": "users",
        "kebab": "users",
        "label": "Users",
        "pascal": "Users",
        "snake": "users",
      },
      "singular": Object {
        "camel": "user",
        "kebab": "user",
        "label": "User",
        "pascal": "User",
        "snake": "user",
      },
    },
    "references": Array [
      Object {
        "destinationSchemaId": "12345",
        "id": "77ef238f-54ad-4ac2-abcd-19ffb650577b",
        "identifiers": Object {
          "destination": Object {
            "alias": Object {
              "plural": Object {
                "camel": "directors",
                "kebab": "directors",
                "label": "Directors",
                "pascal": "Directors",
                "snake": "directors",
              },
              "singular": Object {
                "camel": "director",
                "kebab": "director",
                "label": "Director",
                "pascal": "Director",
                "snake": "director",
              },
            },
            "canonical": Object {
              "plural": Object {
                "camel": "users",
                "kebab": "users",
                "label": "Users",
                "pascal": "Users",
                "snake": "users",
              },
              "singular": Object {
                "camel": "user",
                "kebab": "user",
                "label": "User",
                "pascal": "User",
                "snake": "user",
              },
            },
          },
          "source": Object {
            "alias": Object {
              "plural": Object {
                "camel": "directedMovies",
                "kebab": "directed-movies",
                "label": "Directed Movies",
                "pascal": "DirectedMovies",
                "snake": "directed_movies",
              },
              "singular": Object {
                "camel": "directedMovie",
                "kebab": "directed-movie",
                "label": "Directed Movie",
                "pascal": "DirectedMovie",
                "snake": "directed_movie",
              },
            },
            "canonical": Object {
              "plural": Object {
                "camel": "movies",
                "kebab": "movies",
                "label": "Movies",
                "pascal": "Movies",
                "snake": "movies",
              },
              "singular": Object {
                "camel": "movie",
                "kebab": "movie",
                "label": "Movie",
                "pascal": "Movie",
                "snake": "movie",
              },
            },
          },
        },
        "sourceRelationId": "relation-example-01",
        "sourceSchemaId": "45678",
        "type": "BELONGS_TO",
      },
    ],
    "relations": Array [],
  },
  Object {
    "attributes": Array [
      Object {
        "addons": Object {
          "required": true,
        },
        "datatype": "STRING",
        "defaultValue": null,
        "id": "name-attr",
        "identifiers": Object {
          "camel": "name",
          "kebab": "name",
          "label": "Name",
          "pascal": "Name",
          "snake": "name",
        },
        "internalNote": "the name of the user",
        "locked": false,
        "source": "USER",
      },
      Object {
        "addons": Object {
          "required": true,
        },
        "datatype": "STRING",
        "defaultValue": null,
        "id": "email-attr",
        "identifiers": Object {
          "camel": "email",
          "kebab": "email",
          "label": "Email",
          "pascal": "Email",
          "snake": "email",
        },
        "internalNote": "the email of the user",
        "locked": false,
        "source": "USER",
      },
    ],
    "configuration": Object {},
    "id": "45678",
    "identifiers": Object {
      "plural": Object {
        "camel": "movies",
        "kebab": "movies",
        "label": "Movies",
        "pascal": "Movies",
        "snake": "movies",
      },
      "singular": Object {
        "camel": "movie",
        "kebab": "movie",
        "label": "Movie",
        "pascal": "Movie",
        "snake": "movie",
      },
    },
    "references": Array [],
    "relations": Array [
      Object {
        "destinationSchemaId": "12345",
        "id": "214048e6-686c-4b7d-a12a-d93f91c4ce56",
        "identifiers": Object {
          "destination": Object {
            "alias": Object {
              "plural": Object {
                "camel": "directors",
                "kebab": "directors",
                "label": "Directors",
                "pascal": "Directors",
                "snake": "directors",
              },
              "singular": Object {
                "camel": "director",
                "kebab": "director",
                "label": "Director",
                "pascal": "Director",
                "snake": "director",
              },
            },
            "canonical": Object {
              "plural": Object {
                "camel": "users",
                "kebab": "users",
                "label": "Users",
                "pascal": "Users",
                "snake": "users",
              },
              "singular": Object {
                "camel": "user",
                "kebab": "user",
                "label": "User",
                "pascal": "User",
                "snake": "user",
              },
            },
          },
          "source": Object {
            "alias": Object {
              "plural": Object {
                "camel": "directedMovies",
                "kebab": "directed-movies",
                "label": "Directed Movies",
                "pascal": "DirectedMovies",
                "snake": "directed_movies",
              },
              "singular": Object {
                "camel": "directedMovie",
                "kebab": "directed-movie",
                "label": "Directed Movie",
                "pascal": "DirectedMovie",
                "snake": "directed_movie",
              },
            },
            "canonical": Object {
              "plural": Object {
                "camel": "movies",
                "kebab": "movies",
                "label": "Movies",
                "pascal": "Movies",
                "snake": "movies",
              },
              "singular": Object {
                "camel": "movie",
                "kebab": "movie",
                "label": "Movie",
                "pascal": "Movie",
                "snake": "movie",
              },
            },
          },
        },
        "sourceRelationId": "relation-example-01",
        "sourceSchemaId": "45678",
        "type": "BELONGS_TO",
      },
    ],
  },
]
`;
